--- a/readme.me
+++ b/readme.me
@@ -1,3 +1,3 @@
-This a quick project that highlights divs automatically following a Figma file.
+This a quick project that highlights divs automatically following a Figma file that will evnentually be added to a squarespace site.
 
 Using JQuery only
